apply plugin: 'com.android.application'
//apply plugin: 'me.tatarka.retrolambda'

android {
    compileSdkVersion rootProject.ext.compileSdkVersion

    defaultConfig {
        applicationId "cn.garymb.ygomobile"
        minSdkVersion 25
        //noinspection ExpiredTargetSdkVersion
        targetSdkVersion 29
        versionCode 31201300
        versionName "3.13.0"
        flavorDimensions "versionCode"
        vectorDrawables.useSupportLibrary = true
        ndkVersion "21.3.6528147"
        ndk {
            abiFilters "armeabi-v7a", "arm64-v8a", "x86"
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    productFlavors {
        cn {
            resValue 'string', 'app_name', 'YGOMobile'
            applicationIdSuffix ".CN"
        }
    }
    buildTypes {
        debug {
            debuggable true
            minifyEnabled false
            ext.alwaysUpdateBuildId = false
            buildConfigField 'boolean', 'DEBUG_MODE', 'true'
        }
        release {
            shrinkResources false
            minifyEnabled false
            buildConfigField 'boolean', 'DEBUG_MODE', 'false'
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    android.applicationVariants.all { variant ->
        variant.outputs.all {
            def fileName = "YGOMobile_${versionName}.Apk"
            outputFileName = fileName
        }
    }
    sourceSets {
        main {
            assets.srcDirs = ['assets']
            jniLibs.srcDirs = ['libs']
        }
    }
    lintOptions {
        ignoreWarnings true
        checkReleaseBuilds false
        abortOnError false
    }
    packagingOptions {
        exclude 'META-INF/DEPENDENCIES'
        exclude 'META-INF/LICENSE'
        exclude 'META-INF/LICENSE.md'
        exclude 'META-INF/LICENSE-notice.md'
        exclude 'META-INF/rxjava.properties'
    }
    androidResources {
        noCompress 'dll', 'config'
    }
    namespace 'cn.garymb.ygomobile.lite'
    buildFeatures {
        viewBinding true
    }
    //    buildToolsVersion '28.0.3'
}

repositories {
    flatDir {
        dirs 'libs'
    }
    maven { url 'https://jitpack.io' }
}
dependencies {
    implementation 'junit:junit:4.12'
    implementation project(':libcore')
    //support-annotations，support-vector-drawable
//    implementation 'com.android.support:appcompat-v7:' + rootProject.ext.supportVersion
//    implementation 'com.android.support:recyclerview-v7:' + rootProject.ext.supportVersion
//    implementation 'com.android.support:design:' + rootProject.ext.supportVersion
    implementation 'cn.hutool:hutool-all:latest.release'
    implementation 'org.jdeferred:jdeferred-android-aar:1.2.4'
    implementation 'com.github.bumptech.glide:glide:4.12.0'
    implementation 'androidx.navigation:navigation-fragment:2.8.1'
    implementation 'androidx.navigation:navigation-ui:2.8.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
    implementation('com.github.chrisbanes.photoview:library:1.2.4') {
        implementation 'com.github.chrisbanes.photoview:library:1.2.4'
        exclude group: 'com.android.support', module: 'support-v4'             //
    }
    implementation "org.igniterealtime.smack:smack-android-extensions:4.3.0"
    implementation "org.igniterealtime.smack:smack-tcp:4.3.0"
    //
    implementation 'org.greenrobot:eventbus:3.0.0'
    implementation 'com.tubb.smrv:swipemenu-recyclerview:5.4.0'
    //
    implementation(name: 'libWindbot', ext: 'aar')

    implementation 'com.nightonke:boommenu:2.1.0'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    //dialog库
    implementation 'com.github.feihuaduo:DialogUtils:1.8.9.31'
    //recyclerview的adapter库
    implementation 'io.github.cymchad:BaseRecyclerViewAdapterHelper:3.0.14'
    implementation 'androidx.appcompat:appcompat:1.7.0'
    implementation 'com.google.android.material:material:1.12.0'
    //图片选择
    implementation 'com.github.smuyyh:ImageSelector:3.0'
    //跨进程SharedPreferencesPlus工具
    implementation 'com.github.zhangliangming:PreferencesProvider:v1.3'
    implementation 'org.apache.commons:commons-lang3:3.7'
    api 'com.tencent.tbs:tbssdk:44226'
    //http请求库
    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
    implementation 'com.bm.photoview:library:1.4.1'
    //引导页库
    implementation 'com.github.huburt-Hu:NewbieGuide:v2.4.4'
    //androidX 版本使用下面的依赖
    implementation 'com.github.xiaohaibin:XBanner:androidx_v1.2.0'
    implementation 'com.android.support:multidex:1.0.3'
    implementation 'com.flyco.tablayout:FlycoTabLayout_Lib:2.1.2@aar'

    implementation 'com.github.jenly1314:circleprogressview:1.1.3'

    implementation 'com.google.code.gson:gson:2.8.6'
    implementation "androidx.palette:palette:1.0.0"
    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.2.0'
    //圆形头像
    implementation 'de.hdodenhof:circleimageview:2.2.0'
    //决斗助手
    implementation 'com.github.feihuaduo:YGODuelAssistantLib:1.0.8'
    // jsoup HTML parser library @ https://jsoup.org/
    implementation 'org.jsoup:jsoup:1.15.3'
}
